--- a/testcurrency/package.json
+++ b/testcurrency/package.json
@@ -11,14 +11,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
+    "@angular/cdk": "^13.2.1",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
+    "@angular/material": "^13.2.1",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@swimlane/ngx-datatable": "^20.0.0",
+    "angular-material": "^1.2.4",
+    "ng-multiselect-dropdown": "^0.3.8",
     "ngx-color-picker": "^12.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
